micro/Clase22-08/.metadata/.plugins/org.eclipse.cdt.ui/LPC845_CPP_R2052.build.log
21:44:30 **** Incremental Build of configuration Debug for project LPC845_CPP_R2052 ****
make -r -j4 all 
Building file: ../src/TIMERSW_Driver/TIMERSW.cpp
Building file: ../src/crp.c
Building file: ../src/mtb.c
Invoking: MCU C++ Compiler
arm-none-eabi-c++ -DDEBUG -D__CODE_RED -D__NEWLIB__ -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -DCPP_USE_HEAP -D__LPC84X__ -I"C:\Users\notebook\Documents\INFO II 2023\micro\LPC845_CPP_R2052\inc" -I"C:\Users\notebook\Documents\INFO II 2023\micro\LPC845_CPP_R2052\src\TIMERSW_Driver" -I"C:\Users\notebook\Documents\INFO II 2023\micro\LPC845_CPP_R2052\src\SYSTICK_Driver" -I"C:\Users\notebook\Documents\INFO II 2023\micro\LPC845_CPP_R2052\src\GPIO_Driver" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fno-rtti -fno-exceptions -fmerge-constants -fmacro-prefix-map="../src/TIMERSW_Driver/"= -mcpu=cortex-m0 -mthumb -fstack-usage -MMD -MP -MF"src/TIMERSW_Driver/TIMERSW.d" -MT"src/TIMERSW_Driver/TIMERSW.o" -MT"src/TIMERSW_Driver/TIMERSW.d" -o "src/TIMERSW_Driver/TIMERSW.o" "../src/TIMERSW_Driver/TIMERSW.cpp"
Invoking: MCU C Compiler
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -D__NEWLIB__ -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -DCPP_USE_HEAP -D__LPC84X__ -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m0 -mthumb -fstack-usage -MMD -MP -MF"src/crp.d" -MT"src/crp.o" -MT"src/crp.d" -o "src/crp.o" "../src/crp.c"
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -D__NEWLIB__ -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -DCPP_USE_HEAP -D__LPC84X__ -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m0 -mthumb -fstack-usage -MMD -MP -MF"src/mtb.d" -MT"src/mtb.o" -MT"src/mtb.d" -o "src/mtb.o" "../src/mtb.c"
../src/TIMERSW_Driver/TIMERSW.cpp: In member function 'void TIMERSW::start(uint32_t, uint32_t, void* (*)())':
../src/TIMERSW_Driver/TIMERSW.cpp:23:12: error: lvalue required as left operand of assignment
   23 |  this->func() =func();
      |  ~~~~~~~~~~^~
make[1]: *** [src/TIMERSW_Driver/subdir.mk:20: src/TIMERSW_Driver/TIMERSW.o] Error 1
make[1]: *** Waiting for unfinished jobs....
Finished building: ../src/mtb.c
Finished building: ../src/crp.c
 
 
make: *** [makefile:53: all] Error 2
"make -r -j4 all" terminated with exit code 2. Build might be incomplete.

21:44:30 Build Failed. 4 errors, 0 warnings. (took 649ms)

